# wc_predictor

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: deploy.yml  refresh-team-data.yml  regenerate-baseline.yml  scrape-results.yml
crates/wc-cli/: Cargo.toml
crates/wc-cli/src/: cli.rs  data.rs  error.rs  main.rs  output.rs
crates/wc-cli/src/commands/: match_cmd.rs  mod.rs  simulate.rs  team.rs  teams.rs
crates/wc-core/: Cargo.toml
crates/wc-core/src/: bracket.rs  fixed_results.rs  group.rs  knockout.rs  lib.rs  match_result.rs  team.rs  tiebreaker.rs  tournament.rs
crates/wc-simulation/: Cargo.toml
crates/wc-simulation/examples/: show_bracket.rs  show_most_likely_bracket.rs  show_optimal_bracket.rs
crates/wc-simulation/src/: aggregator.rs  engine.rs  lib.rs  optimal_bracket.rs  path_tracker.rs  runner.rs
crates/wc-strategies/: Cargo.toml
crates/wc-strategies/src/: composite.rs  elo.rs  fifa_ranking.rs  form.rs  lib.rs  market_value.rs  traits.rs
crates/wc-wasm/: Cargo.toml
crates/wc-wasm/src/: api.rs  lib.rs
data/: teams.json
docs/: FIFA_WC2026_Tournament_Format.md  SCHEDULE_VALIDATION.md
scrapers/: .gitignore  apply_elo.py  check_data_guards.py  ensure_form_input.py  requirements.txt
scrapers/cli/: __init__.py  merge_data.py  scrape_elo.py  scrape_fifa.py  scrape_groups.py  scrape_results.py  scrape_schedule.py  scrape_sofascore.py  scrape_transfermarkt.py  validate.py
scrapers/config/: settings.py  team_mapping.json
scrapers/models/: team.py
scrapers/sources/: __init__.py  base.py  elo_scraper.py  fifa_scraper.py  groups_scraper.py  results_scraper.py  schedule_scraper.py  sofascore_scraper.py  transfermarkt_scraper.py
scrapers/utils/: http.py  logging_config.py
scripts/: generate_baseline.sh
web/: .gitignore  dev.sh  index.html  package-lock.json  package.json  vite.config.ts
web/public/data/: baseline_results.json  results.json  schedule.json  teams.json  venues.json
web/src/: App.tsx  index.css
web/src/components/bracket/: BracketMatch.tsx  KnockoutBracket.tsx  TeamSlot.tsx  index.ts
web/src/components/calculator/: HeadToHeadCalculator.tsx  TeamSelector.tsx  index.ts
web/src/components/common/: BaselineBanner.tsx  Button.tsx  Card.tsx  LoadingModal.tsx  LoadingSpinner.tsx  ProbabilityBar.tsx  index.ts
web/src/components/controls/: CompositeWeights.tsx  ControlPanel.tsx  IterationSlider.tsx  StrategySelector.tsx  index.ts
web/src/components/editor/: TeamDataEditor.tsx  index.ts
web/src/components/fixtures/: FixturesView.tsx  index.ts
web/src/components/groups/: GroupStageView.tsx  GroupTable.tsx  index.ts
web/src/components/layout/: Header.tsx  Layout.tsx  TabNavigation.tsx  index.ts
web/src/hooks/: useWasm.ts
web/src/store/: simulatorStore.ts
web/src/types/: index.ts  wasm.d.ts
web/src/utils/: bracketUtils.ts  fixedResults.ts  formatting.ts  matchMapping.ts  normalizeSimulationResult.ts  venueUtils.ts
web/wasm-pkg/: package.json  wc_wasm.d.ts  wc_wasm.js  wc_wasm_bg.wasm  wc_wasm_bg.wasm.d.ts
(+17 files in other folders)
