[package]
name = "wc-wasm"
version.workspace = true
edition.workspace = true
description = "WebAssembly bindings for World Cup simulation"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wc-core = { path = "../wc-core" }
wc-strategies = { path = "../wc-strategies" }
wc-simulation = { path = "../wc-simulation" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
